[package]
name = "nutrient_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
clap = "4.5.8"
env_logger = "0.11.3"
flate2 = { version = "1.0.30", features = ["zlib"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
local-ip-address = "0.6.1"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["blocking", "gzip"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
